--- a/babel.config.yml
+++ b/babel.config.yml
@@ -17,11 +17,10 @@ phases:
     build:
         commands:
             - echo Testing...
-            - yarn test
             - echo Building...
             - yarn build
 artifacts:
     files:
         - "**/*"
     discard-paths: no
-    base-directory: build
+    # base-directory: build
