--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,3 +19,8 @@ phases:
             - echo Testing...
             - echo Building...
             - yarn build
+artifacts:
+    files:
+        - "**/*"
+    discard-paths: no
+    # base-directory: build
